[tool.poetry]
name = "alsbts-modules"
version = "0.2.0"
description = "Modules for alsbts"
authors = ["bela127 <bhb127@outlook.de>"]
license = "MIT"
packages = [
    { include = "alsbts/modules", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
alts-core = { path = "/home/bela/Cloud/code/Git/alts-core", develop = true }
#alts-core = {git = "https://github.com/bela127/alts-core.git"}
alsbts-core = { path = "/home/bela/Cloud/code/Git/alsbts-core", develop = true }
#alsbts-core = {git = "https://github.com/bela127/alsbts-core.git"}
alts-modules = { path = "/home/bela/Cloud/code/Git/alts-modules", develop = true }
#alts-modules = {git = "https://github.com/bela127/alts-modules.git"}
paramz = {git = "https://github.com/bela127/paramz.git"}
GPy = {git = "https://github.com/bela127/GPy.git"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.910"
black = "^21.6b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
plugins = "numpy.typing.mypy_plugin"
